# turbograph

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  go.mod
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
bench/: ablate.go  dataset.go  embedder.go  regression_test.go  run.go
clients/python/: README.md  example.py  pyproject.toml
clients/python/tests/: test_client.py
clients/python/turbograph/: __init__.py  client.py  sse.py
docs/: api.md  architecture.md  benchmarks.md  extending.md  format.md  ingestion.md  limits.md  primitives.md  research-2026-07.md  scripts.md
entity/: canonical.go  canonical_test.go  entity.go  entity_test.go  llm.go
eval/: answer.go  answer_test.go  harness.go  harness_test.go  metrics.go  metrics_test.go
extract/: extract.go  extract_test.go  registry.go  registry_test.go
graph/: community.go  community_test.go  graph.go  graph_test.go
index/: bench_test.go  dotf.go  dotf_amd64.go  dotf_amd64.s  dotf_noasm.go  dotf_test.go  hnsw.go  hnsw_filter_test.go  hnsw_heap.go  hnsw_restore_test.go  hnsw_test.go  index.go  index_test.go  prof_test.go  recall_test.go  topheap.go
lexical/: batch_test.go  bm25.go  bm25_test.go  determinism_test.go  doc.go  rrf.go  rrf_test.go  tokenize.go  tokenize_test.go
mcp/: mcp.go  mcp_test.go
oai/: oai.go  oai_test.go
ollama/: client_test.go  ollama.go  ollama_test.go  prompts_test.go
quant/: bench.go  bench_test.go  codebook.go  doc.go  estimator.go  (+5 more)
(+108 files in other folders)
